# artiq-alkaline

./: .gitignore  .gitmodules  dataset_db.mdb-lock  device_db.py  flake.nix  flash_storage.img  possible.json  pyproject.toml  schema.json
flash/: top.bit
repository/: common.py  drg.py  drg2.py  drg_nightly.py
repository/Experimental Sequences/: Lab_based_sequence_v2.py  atom_servo.py  blue_mot_loading_time.py  blue_mot_loading_timeV2.py  blue_mot_loading_v3.py  clock_transition_scan.py  continuous_mode.py  redmot_time_of_flight.py  sequence_main.py  sequence_main_test.py  sequence_main_v001.py  test_clock_transition.py
repository/Modules testing/: DDS_modulated.py  ad9910_drg.py  ad9910_modulation (Not working).py  ad9910_modulation.py  ad9910_rpc.py  ad9910_rpc2.py  ad9910test.py  ad9912test.py  core_test.py  sampler_test.py  sampler_test_2.py  ttl_test.py  zotino_test.py
repository/test_modules/: ad9910_DRG.py  broadband.py  core_test.py  rabi_flop.py  redmot.py  urukul_rampski.py
results/2025-04-30/15/: 000000000-TestCore.h5
results/2025-04-30/17/: 000000001-TestCore.h5
results/2025-05-06/13/: 000000002-TestCore.h5  000000003-TestCore.h5  000000004-TestCore.h5  000000005-TestCore.h5  000000006-TestCore.h5  000000007-TestCore.h5
results/2025-05-06/14/: 000000008-TestCore.h5
results/2025-05-06/15/: 000000009-TestCore.h5
results/2025-05-09/13/: 000000010-TestCore.h5
results/2025-05-09/14/: 000000011-TestCore.h5
results/2025-05-12/12/: 000000012-TestCore.h5
results/2025-05-13/11/: 000000014-TestCore.h5  000000015-TestCore.h5  000000016-TestCore.h5
(+70 files in other folders)
