[project]
name = "artiq-alkaline"
version = "0.1.0"
description = "ARTIQ repository for all of Alkaline Team's projects @ UOB"
authors = [
    {name = "anuragborah",email = "anuragborah2548@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"